--- a/patrimonioEJB/src/main/webapp/login.xhtml
+++ b/patrimonioEJB/src/main/webapp/login.xhtml
@@ -1,7 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" 
+		xmlns:f="http://java.sun.com/jsf/core" 
+		xmlns:h="http://java.sun.com/jsf/html" 
+		xmlns:ui="http://java.sun.com/jsf/facelets" 
+		xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<h:outputScript name="app.js" library="js" />
 	<h:outputStylesheet name="base.css" library="css" />
@@ -12,12 +16,10 @@
 <h:body>
 
 	<h:form>
-
 		<p:growl showDetail="false" sticky="true" life="3000" id="growl" />
-
-		<p:dialog id="dialog" header="Login" widgetVar="dlg" resizable="false" visible="true" rendered="true" closable="false" showEffect="flip" hideEffect="flip">
-
-			<h:panelGrid columns="2" border="1" cellpadding="5px" cellspacing="2" style="width: 100px; font-size: 14px; font-family: Arial; font-weight: bold; border-style: none;">
+		
+		<p:dialog id="dialog" header="Login" resizable="false" visible="true" closable="false" showEffect="flip" hideEffect="flip">
+			<h:panelGrid columns="2" border="1" cellpadding="5" cellspacing="2" style="width: 100px; font-size: 14px; font-family: Arial; font-weight: bold; border-style: none;">
 				<p:outputLabel value="E-mail: " />
 				<p:inputText id="email" label="email" value="#{loginMB.email}" required="true" requiredMessage="Digite o e-mail do usuário." />
 				<p:outputLabel value="Password: " />
@@ -27,9 +29,7 @@
 				<h:outputLabel value="invisible" style="visibility: hidden" />
 				<p:commandButton action="#{loginMB.login}" value="Login" ajax="false" style="font-size: 12px" />
 			</h:panelGrid>
-
 		</p:dialog>
-
 	</h:form>
 </h:body>
 </html>
